--- a/app/assets/stylesheets/invoice_bar/navbar.css.scss
+++ b/app/assets/stylesheets/invoice_bar/navbar.css.scss
@@ -1,4 +1,4 @@
-body { background: #FAFAFA; }
+body { background: #FCFCFC; }
 
 .navbar-inner {
   background: 0;
@@ -14,7 +14,6 @@ body { background: #FAFAFA; }
 
 .navbar-container {
   border-bottom: 1px solid lightgrey;
-  margin-bottom: 30px;
   background: white;
 }
 
