--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,62 +1,58 @@
 <%= content_for :sub_navigation do %>
-  <ul class="nav nav-pills" style="float:right;">
-    <li class="active">
-      <%= link_to t('titles.invoices'), invoices_path %>
+  <ul class="nav nav nav-pills" style="text-align:center;margin-bottom:1px;border:0;border-bottom:1px solid #F4F0FC;">
+    <li>
+      <a href="<%= new_invoice_path %>" style="background:#D2FAC3;color:black;margin-right:90px;">
+        <%= t('links.new_invoice') %>
+      </a>
     </li>
+    <li<% unless @section %> class="active"<% end %>>
+      <%= link_to t('navigation.all'), filter_invoices_url(params.merge(page: 1)) %>
+    </li>
+    <li<% if @section == :issued %> class="active"<% end %>>
+      <%= link_to t('navigation.issued'), issued_invoices_url(params.merge(page: 1)) %>
+    </li>
+    <li<% if @section == :received %> class="active"<% end %>>
+      <%= link_to t('navigation.received'), received_invoices_url(params.merge(page: 1)) %>
+    </li>
+    <% if params[:deposit] == 'true' %>
+      <li style="margin-left:90px;" class="selected">
+        <%= link_to t('titles.deposits'), filter_invoices_url(params.except(:deposit)) %>
+      </li>
+    <% else %>
+      <li style="margin-left:90px;" class="">
+        <%= link_to t('titles.deposits'), filter_invoices_url(params.merge(deposit: true)) %>
+      </li>
+    <% end %>
     <li>
       <%= link_to t('titles.invoice_templates'), invoice_templates_path %>
     </li>
+    <div style="clear:both"></div>
   </ul>
-  <div class="btn-group"  style="float:left;">
-    <a class="btn btn-success" href="<%= new_invoice_path %>">
-      <i class="icon-pencil icon-white"></i> <%= t('links.new_invoice') %>
-    </a>
-    <a class="btn btn-success dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-    <ul class="dropdown-menu">
-      <li>
-        <%= link_to t('links.new_invoice_for_contact'), contacts_path %>
-      </li>
-      <li>
-        <%= link_to t('links.new_invoice_from_template'), invoice_templates_path %></a>
-      </li>
-    </ul>
+
+  <div class="status-filter">
+    <span class="<% unless params[:status] == nil %>not-selected<% end %>">
+      <%= link_to t('buttons.all'), filter_invoices_url(params.merge(status: nil)), class: 'btn-small btn-inverse btn-no-link' %>
+    </span>
+    <span class="<% unless params[:status] == 'not_paid' %>not-selected<% end %>">
+      <%= link_to t('buttons.not_paid'), filter_invoices_url(params.merge(status: 'not_paid')), class: 'btn-small btn-danger btn-no-link' %>
+    </span>
+    <span class="<% unless params[:status] == 'paid' %>not-selected<% end %>">
+      <%= link_to t('buttons.paid'), filter_invoices_url(params.merge(status: 'paid')), class: 'btn-small btn-success btn-no-link' %>
+    </span>
+    <span class="<% unless params[:status] == 'not_sent' %>not-selected<% end %>">
+      <%= link_to t('buttons.not_sent'), filter_invoices_url(params.merge(status: 'not_sent')), class: 'btn-small btn-warning btn-no-link' %>
+    </span>
+    <span class="<% unless params[:status] == 'sent' %>not-selected<% end %>">
+      <%= link_to t('buttons.sent'), filter_invoices_url(params.merge(status: 'sent')), class: 'btn-small btn-info btn-no-link' %>
+    </span>
   </div>
-  <h1>
-    <%= t('titles.invoices') %>
-  </h1>
+
+  <%= render partial: 'forms/filter', params: params %>
+
+  <div style="clear:both"></div>
 <% end %>
 
-<ul class="nav nav-tabs" style="margin-bottom:1px;border:0">
-  <li<% unless @section %> class="active"<% end %>>
-    <%= link_to t('navigation.all'), filter_invoices_url(params.merge(page: 1)) %>
-  </li>
-  <li<% if @section == :issued %> class="active"<% end %>>
-    <%= link_to t('navigation.issued'), issued_invoices_url(params.merge(page: 1)) %>
-  </li>
-  <li<% if @section == :received %> class="active"<% end %>>
-    <%= link_to t('navigation.received'), received_invoices_url(params.merge(page: 1)) %>
-  </li>
-</ul>
 
-<%= render partial: 'forms/filter', params: params %>
-
-<div class="status-filter">
-  <span class="<% unless params[:status] == nil %>not-selected<% end %>">
-  <%= link_to t('buttons.all'), filter_invoices_url(params.merge(status: nil)), class: 'btn-small btn-inverse btn-no-link' %>
-  </span>
-  <span class="<% unless params[:status] == 'not_paid' %>not-selected<% end %>">
-  <%= link_to t('buttons.not_paid'), filter_invoices_url(params.merge(status: 'not_paid')), class: 'btn-small btn-danger btn-no-link' %>
-  </span>
-  <span class="<% unless params[:status] == 'paid' %>not-selected<% end %>">
-  <%= link_to t('buttons.paid'), filter_invoices_url(params.merge(status: 'paid')), class: 'btn-small btn-success btn-no-link' %>
-  </span>
-  <span class="<% unless params[:status] == 'not_sent' %>not-selected<% end %>">
-  <%= link_to t('buttons.not_sent'), filter_invoices_url(params.merge(status: 'not_sent')), class: 'btn-small btn-warning btn-no-link' %>
-  </span>
-  <span class="<% unless params[:status] == 'sent' %>not-selected<% end %>">
-  <%= link_to t('buttons.sent'), filter_invoices_url(params.merge(status: 'sent')), class: 'btn-small btn-info btn-no-link' %>
-  </span>
-</div>
 
 <table class="table table-striped table-bordered table-hover">
   <thead>
