--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -36,6 +36,6 @@
     </div>
 </div>
 </div>
-<div class="container sub-navigation">
+<div class="sub-navigation">
   <%= yield :sub_navigation %>
 </div>
