--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -1,40 +1,26 @@
 <%= content_for :sub_navigation do %>
-  <ul class="nav nav-pills" style="float:right;">
-    <li class="active">
-      <%= link_to t('titles.receipts'), receipts_path %>
-    </li>
+  <ul class="nav nav-pills" style="text-align:center;margin-bottom:1px;border:0;border-bottom:1px solid #F4F0FC;">
     <li>
+      <a href="<%= new_receipt_path %>" style="background:#D2FAC3;color:black;margin-right:90px;">
+        <%= t('links.new_receipt') %>
+      </a>
+    </li>
+    <li<% unless @section %> class="active"<% end %>>
+      <%= link_to t('navigation.all'), filter_receipts_url(params.merge(page: 1)) %>
+    </li>
+    <li<% if @section == :expence %> class="active"<% end %>>
+      <%= link_to t('navigation.expence'), expence_receipts_url(params.merge(page: 1)) %>
+    </li>
+    <li<% if @section == :income %> class="active"<% end %>>
+      <%= link_to t('navigation.income'), income_receipts_url(params.merge(page: 1)) %>
+    </li>
+    <li style="margin-left:90px;">
       <%= link_to t('titles.receipt_templates'), receipt_templates_path %>
     </li>
   </ul>
-  <div class="btn-group"  style="float:left;">
-    <a class="btn btn-success" href="<%= new_receipt_path %>">
-      <i class="icon-pencil icon-white"></i> <%= t('links.new_receipt') %>
-    </a>
-    <a class="btn btn-success dropdown-toggle" data-toggle="dropdown" href="#"><span class="caret"></span></a>
-    <ul class="dropdown-menu">
-      <li><%= link_to t('links.new_receipt_for_contact'), contacts_path %></li>
-      <li><%= link_to t('links.new_receipt_from_template'), receipt_templates_path %></a></li>
-    </ul>
-  </div>
-  <h1>
-    <%= t('titles.receipts') %>
-  </h1>
+
+  <%= render partial: 'forms/filter', params: params %>
 <% end %>
-
-<ul class="nav nav-tabs" style="margin-bottom:1px;border:0">
-  <li<% unless @section %> class="active"<% end %>>
-    <%= link_to t('navigation.all'), filter_receipts_url(params.merge(page: 1)) %>
-  </li>
-  <li<% if @section == :expence %> class="active"<% end %>>
-    <%= link_to t('navigation.expence'), expence_receipts_url(params.merge(page: 1)) %>
-  </li>
-  <li<% if @section == :income %> class="active"<% end %>>
-    <%= link_to t('navigation.income'), income_receipts_url(params.merge(page: 1)) %>
-  </li>
-</ul>
-
-<%= render partial: 'forms/filter', params: params %>
 
 <table class="table table-striped table-bordered table-hover">
   <thead>
