First part of a story

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
             <li class="<%= active_for_controller('receipt') %>"><%= link_to t('invoice_bar.navbar.receipts'), receipts_path %></li>
             <li class="<%= active_for_controller('contact') %>"><%= link_to t('invoice_bar.navbar.contacts'), contacts_path %></li>
             <li class="<%= active_for_controller('account') %>"><%= link_to t('invoice_bar.navbar.accounts'), accounts_path %></li>
-            <li class="<%= active_for_controller('settings') %>"><%= link_to t('invoice_bar.navbar.profile'), profile_path %></li>
+            <li class="<%= active_for_controller('settings') %>"><%= link_to t('invoice_bar.navbar.profile'), account_settings_path %></li>
             <% if current_user.administrator %>
               <li class="<%= active_for_controller('users') %>"><%= link_to t('invoice_bar.navbar.users'), users_path %></li>
               <li class="<%= active_for_controller('currencies') %>"><%= link_to t('invoice_bar.navbar.currencies'), currencies_path %></li>
