--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -1,11 +1,21 @@
+<%= content_for :sub_navigation do %>
+  <ul class="nav nav nav-pills" style="text-align:center;margin-bottom:1px;border:0;border-bottom:1px solid #F4F0FC;">
+    <li<% if @section == :account %> class="active"<% end %>>
+      <%= link_to t('navigation.account_settings'), account_settings_path %>
+    </li>
+    <li<% if @section == :sequences %> class="active"<% end %>>
+      <%= link_to t('navigation.sequences_settings'), sequences_settings_path %>
+    </li>
+    <div style="clear:both"></div>
+  </ul>
+<% end %>
 <div class="container">
-  <h1>Nastavení</h1>
   <div class="row">
     <%= form_for @user do |f| %>
       <%= render 'forms/errors', model:  @user %>
 
       <div class="span3">
-        <h4>Konto</h4>
+        <h4><%= t('navigation.account_settings') %></h4>
         <div class="control-group">
           <%= f.label :email, t('attributes.user.email') %>
           <%= f.text_field :email, placeholder: t('attributes.user.email'), class: 'suggested' %>
