Test create first invoice

--- a/app/views/documents/_show.html.erb
+++ b/app/views/documents/_show.html.erb
@@ -1,3 +1,5 @@
+<h1><%= document.number %></h1>
+
 <div style="margin-bottom: 15px">
   <% if document.instance_of? Invoice %>
     <%= link_to "Vytvořit doklad o zaplacení", create_receipt_for_invoice_path(number: document.number), class: 'btn' if @invoice.receipt_id.blank? %>
