Make assets work

--- a/app/views/layouts/_head.html.erb
+++ b/app/views/layouts/_head.html.erb
@@ -1,5 +1,5 @@
 <title><%= t('invoice_bar.invoice_bar') %></title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<%= stylesheet_link_tag    "invoice_bar/invoice_bar", media: "all" %>
-<%= javascript_include_tag "invoice_bar/invoice_bar" %>
+<%= stylesheet_link_tag    "invoice_bar/application", media: "all" %>
+<%= javascript_include_tag "invoice_bar/application" %>
 <%= csrf_meta_tags %>
