Finish implementing times with zoneinfo

--- a/app/views/documents/_show.html.erb
+++ b/app/views/documents/_show.html.erb
@@ -116,3 +116,7 @@
 <div id="items">
   <%= "Poznámka: #{document.note}" if document.note %>
 </div>
+
+<div>
+  Vytvořeno: <%= l(document.created_at, format: :short) %>
+</div>
